fixed issue of pic not showing up in live server

--- a/login.css
+++ b/login.css
@@ -5,7 +5,7 @@ body {
   justify-content: center;
 }
 header {
-  background-image: url(/food\ background.jpg);
+  background-image: url('./food background.jpg');
   height: 430px;
   width: 370px;
   background-size: contain;
@@ -99,7 +99,7 @@ button:hover {
 
 @media (min-width: 800px) {
   body {
-    background-image: url(/food\ background.jpg);
+    background-image: url('./food background.jpg');
     background-repeat: no-repeat;
     background-size: cover;
     display: flex;
